# comfyui-loop-mcp

./: DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: refresh-templates.yml
comfy_mcp/: __init__.py  compress.py  imaging.py  litegraph.py  loop.py  report.py  server.py
comfy_mcp/docs/: COMFYUI_WORKFLOW_LOOP_PROMPT.md  SKILL.md
scripts/: build_template_index.py
tests/: README.md  bench.py  integration_loop.py  integration_mutating.py  integration_smoke.py  test_reroute.py
web/: hero.html  loop_report_example.html
