[project]
name = "comfy-mcp"
version = "0.1.0"
description = "Loop-aware MCP server for ComfyUI — discover from the live API, run, and LOOK at the output."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "John Huikku" }]
dependencies = [
  "mcp[cli]>=1.2.0",
  "httpx>=0.27",
  "anyio>=4.0",
]

[project.scripts]
comfy-mcp = "comfy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comfy_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"comfy_mcp/data/templates_index.json.gz" = "comfy_mcp/data/templates_index.json.gz"
