[project]
name = "comfy-mcp"
version = "0.2.0"
description = "Loop-aware MCP server for ComfyUI — discover from the live API, run, LOOK at the output, and ratchet toward a result that meets the brief."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "John Huikku" }]
keywords = ["comfyui", "mcp", "agent", "diffusion", "vfx", "workflow"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "mcp[cli]>=1.2.0",
  "httpx>=0.27",
  "anyio>=4.0",
  "pillow>=10.0",  # compare_images / measure_image — an MCP client has no shell for ffmpeg
]

[project.urls]
Homepage = "https://github.com/huikku/comfyui-loop-mcp"
"The prompts + skill" = "https://github.com/huikku/comfyui-llm-onboarding-prompt"

[project.scripts]
comfy-mcp = "comfy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comfy_mcp"]

[tool.hatch.build.targets.wheel.force-include]
# Both must ship inside the wheel, or an installed server has no template catalog
# and serves empty prompts.
"comfy_mcp/data/templates_index.json.gz" = "comfy_mcp/data/templates_index.json.gz"
"comfy_mcp/docs/COMFYUI_WORKFLOW_LOOP_PROMPT.md" = "comfy_mcp/docs/COMFYUI_WORKFLOW_LOOP_PROMPT.md"
"comfy_mcp/docs/SKILL.md" = "comfy_mcp/docs/SKILL.md"
